--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <p class="mb-6">Reach out to us for expert advice and seamless Tree NOC solutions.</p>
       <div class="text-left bg-white p-6 rounded-xl shadow">
         <p><strong>Email:</strong> yourname@example.com</p>
-        <p><strong>Phone:</strong> +91-XXXXXXXXXX</p>
+        <p><strong>Phone:</strong> +91-9322049156</p>
         <p><strong>Office Address:</strong> [Your Office Address Here]</p>
         <p><strong>Business Hours:</strong> Mon–Fri, 9:00 AM – 6:00 PM</p>
       </div>
