--- a/index.html
+++ b/index.html
@@ -3,66 +3,125 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Paldiwal Consultants help you obtain Tree NOC permits for legal tree removal and relocation in metropolitan areas.">
   <title>Paldiwal Consultants | Tree NOC Experts</title>
+  <link href="style.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
-    body { font-family: 'Inter', sans-serif; }
+    body {
+      font-family: 'Inter', sans-serif;
+      position: relative;
+      overflow-x: hidden;
+    }
+    .animated-bg {
+      background: url('https://cdn.pixabay.com/photo/2014/04/03/10/32/tree-311087_960_720.png') no-repeat center center;
+      background-size: cover;
+      opacity: 0.05;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+      animation: floatTree 20s ease-in-out infinite;
+    }
+    @keyframes floatTree {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-20px); }
+    }
+    .content {
+      position: relative;
+      z-index: 10;
+    }
+    .card {
+      @apply bg-green-50 p-6 rounded-xl shadow;
+    }
   </style>
 </head>
 <body class="bg-green-50 text-gray-800">
-  <!-- Hero Section -->
-  <section class="bg-green-100 py-20 text-center">
-    <h1 class="text-4xl font-bold text-green-900">Paldiwal Consultants</h1>
-    <p class="mt-4 text-lg text-green-800">Simplifying Tree NOC Processes for Sustainable Development</p>
-    <a href="#contact" class="mt-6 inline-block px-6 py-3 bg-green-700 text-white rounded-lg shadow hover:bg-green-800">Get Your Tree NOC</a>
-  </section>
+  <div class="animated-bg"></div>
+  <div class="content">
+    <!-- Hero Section -->
+    <header class="text-center py-16">
+      <h1 class="text-4xl font-bold text-green-900">Paldiwal Consultants</h1>
+      <p class="mt-4 text-lg text-green-800">Simplifying Tree NOC Processes for Sustainable Development</p>
+      <a href="#contact" class="mt-6 inline-block px-6 py-3 bg-green-700 text-white rounded-lg shadow hover:bg-green-800">Get Your Tree NOC</a>
+    </header>
 
-  <!-- About Section -->
-  <section class="py-16 px-6 max-w-4xl mx-auto">
-    <h2 class="text-2xl font-semibold mb-4">About Us</h2>
-    <p>We specialize in assisting individuals and businesses with obtaining Tree No Objection Certificates (Tree NOCs) required for legal tree removal or relocation in metropolitan areas. Our goal is to support urban development while ensuring compliance with green cover preservation laws.</p>
-  </section>
+    <!-- About Section -->
+    <section class="py-16 px-6 max-w-4xl mx-auto">
+      <h2 class="text-2xl font-semibold mb-4">About Us</h2>
+      <p>We specialize in assisting individuals and businesses with obtaining Tree No Objection Certificates (Tree NOCs) required for legal tree removal or relocation in metropolitan areas. Our goal is to support urban development while ensuring compliance with green cover preservation laws.</p>
+      <div class="mt-8">
+        <h3 class="text-xl font-semibold mb-2">What is a Tree NOC?</h3>
+        <p>Placeholder text: A Tree NOC (No Objection Certificate) is an official approval required before cutting, relocating, or trimming trees in urban areas. It is issued by municipal or environmental authorities to ensure ecological balance is maintained.</p>
+      </div>
+    </section>
 
-  <!-- Services Section -->
-  <section class="bg-white py-16 px-6 max-w-5xl mx-auto">
-    <h2 class="text-2xl font-semibold mb-6 text-center">Our Services</h2>
-    <div class="grid md:grid-cols-2 gap-6">
-      <div class="bg-green-50 p-6 rounded-xl shadow">
-        <h3 class="font-semibold text-lg">Tree Assessment & Documentation</h3>
-        <p>Professional evaluation and records of tree species, health, and viability.</p>
+    <!-- Services Section -->
+    <section class="bg-white py-16 px-6 max-w-5xl mx-auto">
+      <h2 class="text-2xl font-semibold mb-6 text-center">Our Services</h2>
+      <div class="grid md:grid-cols-2 gap-6">
+        <div class="card">
+          <h3 class="font-semibold text-lg">Tree Assessment & Documentation</h3>
+          <p>Professional evaluation and records of tree species, health, and viability.</p>
+        </div>
+        <div class="card">
+          <h3 class="font-semibold text-lg">NOC Application Assistance</h3>
+          <p>We help draft, compile, and submit all necessary documents to authorities.</p>
+        </div>
+        <div class="card">
+          <h3 class="font-semibold text-lg">Compliance Consulting</h3>
+          <p>Ensure your project meets local environmental guidelines and tree regulations.</p>
+        </div>
+        <div class="card">
+          <h3 class="font-semibold text-lg">Liaison with Authorities</h3>
+          <p>Coordination and follow-up with government departments and municipal bodies.</p>
+        </div>
+        <div class="card">
+          <h3 class="font-semibold text-lg">Site Survey & Mapping</h3>
+          <p>Placeholder text: Detailed site inspections and tree mapping to support accurate reporting and compliance.</p>
+        </div>
+        <div class="card">
+          <h3 class="font-semibold text-lg">Post-Approval Guidance</h3>
+          <p>Placeholder text: Support for next steps after NOC approval including project initiation and monitoring.</p>
+        </div>
       </div>
-      <div class="bg-green-50 p-6 rounded-xl shadow">
-        <h3 class="font-semibold text-lg">NOC Application Assistance</h3>
-        <p>We help draft, compile, and submit all necessary documents to authorities.</p>
+      <div class="mt-12 text-center max-w-3xl mx-auto">
+        <h3 class="text-xl font-semibold mb-2">Why Choose Paldiwal Consultants?</h3>
+        <p class="text-gray-700">Placeholder text: With years of experience, local expertise, and a commitment to green development, we are your trusted partner for tree-related compliance and documentation services.</p>
       </div>
-      <div class="bg-green-50 p-6 rounded-xl shadow">
-        <h3 class="font-semibold text-lg">Compliance Consulting</h3>
-        <p>Ensure your project meets local environmental guidelines and tree regulations.</p>
-      </div>
-      <div class="bg-green-50 p-6 rounded-xl shadow">
-        <h3 class="font-semibold text-lg">Liaison with Authorities</h3>
-        <p>Coordination and follow-up with government departments and municipal bodies.</p>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="bg-green-100 py-16 px-6">
-    <div class="max-w-xl mx-auto text-center">
-      <h2 class="text-2xl font-semibold mb-4">Contact Us</h2>
-      <p class="mb-6">Reach out to us for expert advice and seamless Tree NOC solutions.</p>
-      <div class="text-left bg-white p-6 rounded-xl shadow">
-        <p><strong>Email:</strong> yourname@example.com</p>
-        <p><strong>Phone:</strong> +91-9322049156</p>
-        <p><strong>Office Address:</strong> [Your Office Address Here]</p>
-        <p><strong>Business Hours:</strong> Mon–Fri, 9:00 AM – 6:00 PM</p>
+    <!-- Google Form CTA Section -->
+    <section class="bg-green-50 py-12 px-6">
+      <div class="text-center max-w-xl mx-auto">
+        <h2 class="text-xl font-semibold mb-4">Want to Work With Us?</h2>
+        <p class="mb-6">Fill out a quick form to get started. We'll get back to you shortly.</p>
+        <a href="https://forms.gle/your-google-form-id" target="_blank" class="inline-block px-6 py-3 bg-green-700 text-white rounded-lg shadow hover:bg-green-800 transition-all">Fill Out Our Interest Form</a>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- Footer -->
-  <footer class="text-center text-sm text-gray-500 py-4">
-    &copy; 2025 Paldiwal Consultants. All rights reserved.
-  </footer>
+    <!-- Contact Section -->
+    <section id="contact" class="bg-green-100 py-16 px-6">
+      <div class="max-w-xl mx-auto text-center">
+        <h2 class="text-2xl font-semibold mb-4">Contact Us</h2>
+        <p class="mb-6">Reach out to us for expert advice and seamless Tree NOC solutions.</p>
+        <div class="text-left bg-white p-6 rounded-xl shadow">
+          <p><strong>Email:</strong> yourname@example.com</p>
+          <p><strong>Phone:</strong> +91-XXXXXXXXXX</p>
+          <p><strong>Office Address:</strong> [Your Office Address Here]</p>
+          <p><strong>Business Hours:</strong> Mon–Fri, 9:00 AM – 6:00 PM</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="text-center text-sm text-gray-500 py-4">
+      &copy; 2025 Paldiwal Consultants. All rights reserved.<br />
+      <span class="text-green-700">Live at:</span>
+      <a href="https://anshul2197.github.io/tree-noc-landing-page/" class="text-green-800 underline hover:text-green-900" target="_blank">anshul2197.github.io/tree-noc-landing-page</a>
+    </footer>
+  </div>
 </body>
 </html>
