--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       background: linear-gradient(to bottom, #e6f5e6, #ffffff);
     }
     .animated-bg {
-      background: url('https://cdn.pixabay.com/photo/2017/07/05/19/16/tree-2471226_1280.png') no-repeat center center;
+      background: url('https://images.unsplash.com/reserve/bOvf94dPRxWu0u3QsPjF_tree.jpg?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dHJlZXxlbnwwfHwwfHx8MA%3D%3D') no-repeat center center;
       background-size: contain;
       opacity: 0.05;
       position: absolute;
