--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Paldiwal Consultants help you obtain Tree NOC permits for legal tree removal and relocation in metropolitan areas.">
-  <title>Paldiwal Consultants | Tree NOC Experts</title>
+  <meta name="description" content="Paldiwal Consultants help you obtain Tree NOC permits for legal tree removal and relocation in metropolitan areas." />
+  <title>Leaf & Law 🌳 | Tree NOC Experts 🌱</title>
   <link href="style.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <script src="https://unpkg.com/@phosphor-icons/web"></script>
   <style>
     body {
       font-family: 'Inter', sans-serif;
@@ -16,9 +15,9 @@
       background: linear-gradient(to bottom, #e6f5e6, #ffffff);
     }
     .animated-bg {
-      background: url('https://images.unsplash.com/reserve/bOvf94dPRxWu0u3QsPjF_tree.jpg?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dHJlZXxlbnwwfHwwfHx8MA%3D%3D') no-repeat center center;
-      background-size: contain;
-      opacity: 0.05;
+      background: url('https://images.unsplash.com/photo-1620184970374-4e74884e1954') no-repeat center center;
+      background-size: cover;
+      opacity: 0.08;
       position: absolute;
       top: 0;
       left: 0;
@@ -52,70 +51,47 @@
 <body class="bg-green-50 text-gray-800">
   <div class="animated-bg"></div>
   <div class="content">
-    <!-- Banner -->
-    <div class="w-full h-64 bg-cover bg-center" style="background-image: url('https://cdn.pixabay.com/photo/2021/06/07/08/56/forest-6314980_1280.jpg');">
-      <div class="w-full h-full bg-green-900 bg-opacity-40 flex items-center justify-center">
-        <h1 class="text-4xl md:text-5xl font-bold text-white">Your Trusted Tree NOC Partner</h1>
-      </div>
-    </div>
-
     <!-- Hero Section -->
     <header class="text-center py-16 fade-in">
-      <h1 class="text-4xl font-bold text-green-900">Paldiwal Consultants</h1>
-      <p class="mt-4 text-lg text-green-800">Simplifying Tree NOC Processes for Sustainable Development</p>
+      <h1 class="text-4xl font-bold text-green-900">Leaf & Law 🌳</h1>
+      <p class="mt-4 text-lg text-green-800">Simplifying Tree NOC Processes for Sustainable Development 🌱</p>
       <a href="#contact" class="mt-6 inline-block px-6 py-3 bg-green-700 text-white rounded-lg shadow hover:bg-green-800">Get Your Tree NOC</a>
     </header>
 
     <!-- About Section -->
     <section class="py-16 px-6 max-w-4xl mx-auto fade-in">
       <h2 class="text-2xl font-semibold mb-4">About Us</h2>
-      <p>We specialize in assisting individuals and businesses with obtaining Tree No Objection Certificates (Tree NOCs) required for legal tree removal or relocation in metropolitan areas. Our goal is to support urban development while ensuring compliance with green cover preservation laws.</p>
+      <p>Our consultancy specializes in obtaining Tree NOCs (No Objection Certificates) from municipal and planning authorities, an essential legal requirement for construction, redevelopment, or infrastructure projects involving tree felling, transplantation, or new plantations.</p>
       <div class="mt-8">
-        <h3 class="text-xl font-semibold mb-2">What is a Tree NOC?</h3>
-        <p>A Tree NOC (No Objection Certificate) is an official approval required before cutting, relocating, or trimming trees in urban areas. It is issued by municipal or environmental authorities to ensure ecological balance is maintained.</p>
+        <h3 class="text-xl font-semibold mb-2">What is Tree NOC?</h3>
+        <p>Tree NOC is an official approval issued by the local governing body (such as BMC in Mumbai) granting permission to cut, transplant, or retain trees on a project site. It ensures compliance with urban greenery regulations under local Tree Preservation Acts.</p>
       </div>
     </section>
 
     <!-- Services Section -->
     <section class="bg-white py-16 px-6 max-w-5xl mx-auto fade-in">
-      <h2 class="text-2xl font-semibold mb-6 text-center">Our Services</h2>
+      <h2 class="text-2xl font-semibold mb-6 text-center">Our Services Include:</h2>
       <div class="grid md:grid-cols-2 gap-6">
         <div class="card">
-          <h3 class="font-semibold text-lg flex items-center gap-2"><i class="ph ph-file-text"></i> Tree Assessment & Documentation</h3>
-          <p>Professional evaluation and records of tree species, health, and viability.</p>
+          <h3 class="font-semibold text-lg">Tree Survey & Enumeration</h3>
+          <p>Accurate tagging, measurement, and species identification of all on-site trees.</p>
         </div>
         <div class="card">
-          <h3 class="font-semibold text-lg flex items-center gap-2"><i class="ph ph-file-arrow-up"></i> NOC Application Assistance</h3>
-          <p>We help draft, compile, and submit all necessary documents to authorities.</p>
+          <h3 class="font-semibold text-lg">Preparation of Tree Reports</h3>
+          <p>Submission-ready documents including condition assessments, photographs, and transplant feasibility.</p>
         </div>
         <div class="card">
-          <h3 class="font-semibold text-lg flex items-center gap-2"><i class="ph ph-shield-check"></i> Compliance Consulting</h3>
-          <p>Ensure your project meets local environmental guidelines and tree regulations.</p>
+          <h3 class="font-semibold text-lg">Liaising with Authorities</h3>
+          <p>Coordination with Tree Officers, Ward Offices, and Garden Departments for timely approvals.</p>
         </div>
         <div class="card">
-          <h3 class="font-semibold text-lg flex items-center gap-2"><i class="ph ph-buildings"></i> Liaison with Authorities</h3>
-          <p>Coordination and follow-up with government departments and municipal bodies.</p>
+          <h3 class="font-semibold text-lg">Compensatory Plantation Plans</h3>
+          <p>Strategic planning for native and site-suitable species either on-site or through authorized NGOs.</p>
         </div>
         <div class="card">
-          <h3 class="font-semibold text-lg flex items-center gap-2"><i class="ph ph-map-trifold"></i> Site Survey & Mapping</h3>
-          <p>Detailed site inspections and tree mapping to support accurate reporting and compliance.</p>
+          <h3 class="font-semibold text-lg">Submission Assistance</h3>
+          <p>Support in filing applications, tracking file movement, and addressing objections or remarks.</p>
         </div>
-        <div class="card">
-          <h3 class="font-semibold text-lg flex items-center gap-2"><i class="ph ph-check-circle"></i> Post-Approval Guidance</h3>
-          <p>Support for next steps after NOC approval including project initiation and monitoring.</p>
-        </div>
-        <div class="card">
-          <h3 class="font-semibold text-lg flex items-center gap-2"><i class="ph ph-tree"></i> Tree Preservation Planning</h3>
-          <p>Strategies and support to preserve trees during urban development projects.</p>
-        </div>
-        <div class="card">
-          <h3 class="font-semibold text-lg flex items-center gap-2"><i class="ph ph-leaf"></i> Eco Impact Reports</h3>
-          <p>Placeholder text: Analysis of environmental impacts and mitigation strategies for your project.</p>
-        </div>
-      </div>
-      <div class="mt-12 text-center max-w-3xl mx-auto">
-        <h3 class="text-xl font-semibold mb-2">Why Choose Paldiwal Consultants?</h3>
-        <p class="text-gray-700">With years of experience, local expertise, and a commitment to green development, we are your trusted partner for tree-related compliance and documentation services.</p>
       </div>
     </section>
 
@@ -146,7 +122,8 @@
 
     <!-- Footer -->
     <footer class="text-center text-sm text-gray-500 py-4 fade-in">
-      &copy; 2025 Paldiwal Consultants. All rights reserved.<br />
+      &copy; 2025 Leaf & Law. All rights reserved.<br />
+      <p>We ensure smooth and lawful project execution while contributing to ecological sustainability. Whether it’s for a private development, government infrastructure, or institutional campus, we manage the entire Tree NOC process end-to-end.</p>
       <span class="text-green-700">Live at:</span>
       <a href="https://anshul2197.github.io/tree-noc-landing-page/" class="text-green-800 underline hover:text-green-900" target="_blank">anshul2197.github.io/tree-noc-landing-page</a>
     </footer>
