--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       background: linear-gradient(to bottom, #e6f5e6, #ffffff);
     }
     .animated-bg {
-      background: url('https://images.unsplash.com/photo-1620184970374-4e74884e1954') no-repeat center center;
+      background: url('bOvf94dPRxWu0u3QsPjF_tree.avif) no-repeat center center;
       background-size: cover;
       opacity: 0.08;
       position: absolute;
